# barcodekit

./: .gitignore  LICENSE  NOTICE  README.md  README_JP.md  RELEASING.md  RELEASING_JP.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: release.yml  test.yml
checksums/: v0.2.0.sha256  v0.3.0.sha256
licenses/: boombuler-barcode-MIT.txt
scripts/: __init__.py  benchmark.py  prepare_binary.py  sync_release_version.py  verify_wheel.py
src/barcodekit/: __init__.py  _binary.py  _core.py  _errors.py  _version.py
tests/: conftest.py  test_binary_resolution.py  test_command_building.py  test_core.py  test_errors.py  test_integration.py  test_prepare_binary.py  test_sync_release_version.py  test_validation.py  test_verify_wheel.py
